<resources>
    <string name="app_name">ModeloApp</string>
    <string name="Boton1">Botones</string>
    <string name="Boton2">Texto e Imagenes</string>
    <string name="Boton3">Checkbox y Radiobutton</string>
    <string name="Boton4">Listas y Tablas</string>
    <string name="Boton5">Card View</string>
    <string name="Boton6">Controles Personalizados</string>
    <string name="Boton7">Pestañas</string>
    <string name="Boton8">Fragments</string>
    <string name="Boton9">Pestañas</string>
    <string name="Boton10">Pestañas</string>

    <string name="click">Click</string>

    <string name="on">Encendido</string>
    <string name="off">Apagado</string>

    <string name="texto">Esto es un texto :)</string>

    <string name="check">CheckBox</string>
    <string name="radio">RadioButton</string>

    <string name="listaD">Listas desplegables (Spinner)</string>
    <string name="lista">Listas (ListView)</string>
    <string name="listaO">Listas Optimizadas (ViewHolder)</string>
    <string name="tabla">Tablas</string>

    <string name="tarjeta1">Tarjeta 1</string>
    <string name="tarjeta2">Rio de Janeiro</string>

    <string name="controlP1">Extendiendo la funcionalidad de un control ya existente.</string>
    <string name="controlP2">Combinando varios controles para formar otro más complejo.</string>
    <string name="controlP3">Diseñando desde cero un nuevo control.</string>

    <string name="login">Inicio de Sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>

</resources>
