<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/morado"
    tools:context=".ControlPersonal"
    android:orientation="vertical"
    android:id="@+id/control">

    <TextView
        android:id="@+id/txtBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/diez"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Boton6"
        android:textColor="@color/negro"
        android:textSize="@dimen/titulo" />

    <Button
        android:id="@+id/cont1"
        android:layout_marginTop="@dimen/diez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/controlP1"/>

    <Button
        android:id="@+id/cont2"
        android:layout_marginTop="@dimen/diez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/controlP2"/>

    <Button
        android:id="@+id/cont3"
        android:layout_marginTop="@dimen/diez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/controlP3"/>

</LinearLayout>
