<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:id = "@+id/linearLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation = "vertical"
    android:background="#8ac8c7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu principal"
        android:id="@+id/txtMenu"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="40dp"
        android:textColor="@color/negro" />

    <!-- Reloj -->
    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textClock"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal" />

    <!-- Contenedor de la ventana relativa-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutContainer"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <!-- dos ventanas que comparten el mismo contenedor de forma horizontal-->
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/boton1"
                    android:text="@string/Boton1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
                <Button
                    android:id="@+id/boton2"
                    android:text="@string/Boton2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
                <Button
                    android:id="@+id/boton3"
                    android:text="@string/Boton3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
                <Button
                    android:id="@+id/boton4"
                    android:text="@string/Boton4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
                <Button
                    android:id="@+id/boton5"
                    android:text="@string/Boton5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <Button
                    android:id="@+id/boton6"
                    android:text="@string/Boton6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
                <Button
                    android:id="@+id/boton7"
                    android:text="@string/Boton7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
                <Button
                    android:id="@+id/boton8"
                    android:text="@string/Boton8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="sans-serif-light">
                </Button>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
