<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#df8538"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.creaturmac.modeloapp.Botones">

    <TextView
        android:id="@+id/txtBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Boton4"
        android:textColor="#000"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/txtCheckRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text=""
        android:textColor="#000"
        android:textSize="20dp" />

    <!-- Contenedor de la ventana relativa-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/Btn1"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/listaD" />

        <Button
            android:id="@+id/Btn2"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/lista" />

        <Button
            android:id="@+id/Btn3"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/listaO" />

        <Button
            android:id="@+id/Btn4"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/tabla" />

        <Button
            android:id="@+id/Btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/recyclerView" />

    </LinearLayout>

</LinearLayout>

