<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c8c850"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.creaturmac.modeloapp.Botones">

    <TextView
        android:id="@+id/txtBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Boton3"
        android:textColor="#000"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/txtCheckRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text=""
        android:textColor="#000"
        android:textSize="20dp" />

    <!-- Contenedor de la ventana relativa-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <!-- Titulo del texto-->
                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txtCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/check"
                    android:textColor="#000"
                    android:textSize="15dp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_marginTop="10dp"
                    android:id="@+id/ChkMarcame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:checked="false" />

                <CheckBox
                    android:layout_marginTop="10dp"
                    android:id="@+id/ChkMarcame1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:checked="false" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <!-- Titulo del texto-->
                <TextView
                    android:id="@+id/txtRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/radio"
                    android:textColor="#000"
                    android:textSize="15dp"
                    android:textAlignment="center" />

                <!-- RadioGrup-->
                <RadioGroup
                    android:layout_marginTop="10dp"

                    android:id="@+id/GrbGrupo1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton android:id="@+id/RbOpcion1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on" />

                    <RadioButton android:id="@+id/RbOpcion2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/off" />
                </RadioGroup>

                <!-- RadioGrup-->
                <RadioGroup
                    android:layout_marginTop="10dp"

                    android:id="@+id/GrbGrupo2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton android:id="@+id/RbOpcion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on" />

                    <RadioButton android:id="@+id/RbOpcion0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/off" />
                </RadioGroup>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
