<?xml version="1.0" encoding="utf-8"?>
<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.creaturmac.modeloapp.txt_img">

</RelativeLayout>
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50728c"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.creaturmac.modeloapp.Botones">

    <TextView
        android:id="@+id/txtBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Boton2"
        android:textColor="@color/negro"
        android:textSize="40dp" />

    <!-- Texto de cambio-->
    <!--
    <TextView
        android:id="@+id/txtCambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Texto"
        android:textColor="#000"
        android:textSize="15dp" />

     -->
    <!-- Contenedor de la ventana relativa-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- dos ventanas que comparten el mismo contenedor de forma horizontal-->
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <!--ventana con imagen-->
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"

                    android:id="@+id/ImgFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher"
                    android:contentDescription="Ejemplo de Imagen"
                    android:scaleType="centerCrop"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"/>

                <!-- Editor de texto-->
                <EditText
                    android:layout_marginTop="@dimen/diez"
                    android:layout_gravity="center_horizontal"

                    android:id="@+id/TxtBasico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:layout_marginTop="@dimen/diez"
                    android:layout_gravity="center_horizontal"

                    android:id="@+id/TxtBasico1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:layout_marginTop="@dimen/diez"
                    android:layout_gravity="center_horizontal"

                    android:id="@+id/TxtBasico2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/texto"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <!-- Texto normal (Label) -->
                <TextView
                    android:layout_marginTop="@dimen/diez"
                    android:layout_gravity="center_horizontal"

                    android:id="@+id/lblEtiqueta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto"
                    android:background="@color/verdeClaro"
                    android:typeface="monospace"
                    android:textSize="15dp"/>

                <!-- Editor de texto con imagen-->
                <EditText
                    android:layout_marginTop="@dimen/diez"
                    android:layout_gravity="center_horizontal"

                    android:id="@+id/txtImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_good"
                    android:hint="@string/texto"
                    android:textColorHint="@color/gris"
                    android:inputType="text" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText android:id="@+id/TxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Escribe un número par" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnInputLayout"
            android:text="@string/on"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
